Fixed mask issues by adding a z-index of 500 to mask

--- a/src/index.css
+++ b/src/index.css
@@ -208,6 +208,7 @@ input[type=number] {
   height: 100vh;
   width: 100vw;
   background-color: var(--color-mask);
+  z-index: 500;
 }
 
 .underline {
